# axum-sqlx-template

./: .env  Cargo.toml  build.sh
migrations/: 20241227121627_user.sql
server/: Cargo.toml
server-api/: Cargo.toml
server-api/src/: lib.rs
server-auth/: Cargo.toml
server-cache/: Cargo.toml
server-cache/src/: lib.rs
server-core/: Cargo.toml
server-core/src/: config.rs  error.rs  lib.rs  state.rs  types.rs
server-database/: Cargo.toml
server-database/src/: user.rs
server-grpc/: Cargo.toml
server-model/: Cargo.toml
server-mq/: Cargo.toml
server-search/: Cargo.toml
server-service/: Cargo.toml
server-service/src/: lib.rs
server-start/: Cargo.toml
server-start/src/: init.rs  lib.rs
server-start/src/init/: config.rs  database.rs  env.rs  redis.rs  tracing.rs
server/src/: main.rs
